--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,1 +1,12 @@
-<!DOCTYPE html><html><head><title>Client App</title></head><body><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Client App</title>
+</head>
+<body>
+  <div id="root"></div>
+  <script src="../index.js"></script>
+</body>
+</html>
